@@ -1,7 +1,6 @@
 package com.project.web.service;
 
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -18,27 +17,34 @@ import lombok.RequiredArgsConstructor;
 @RequiredArgsConstructor
 public class AiSummaryService {
 
-    private final RestTemplate restTemplate;
+    private final RestTemplate restTemplate = new RestTemplate();
+    // ↑ 혹은 @Bean으로 주입 받아도 OK
 
     public List<AiSummaryDTO> getAiSummaryFromFastAPI(String corpCode, String userPurpose) {
-        String url = "http://localhost:8000/api/gpt/summary";  // ✅ 변경됨
+        if (corpCode == null || corpCode.isBlank()) {
+            System.out.println("❌ corpCode is null/blank");
+            return List.of();
+        }
+        String safePurpose = (userPurpose == null || userPurpose.isBlank()) ? "안정형" : userPurpose;
 
-        Map<String, String> request = new HashMap<>();
-        request.put("corpCode", corpCode);              // ✅ corpName → corpCode
-        request.put("userPurpose", userPurpose);
+        String url = "http://localhost:8000/api/gpt/summary";
+
+        Map<String, String> request = new HashMap<>(); // Map.of 금지
+        request.put("corpCode", corpCode);
+        request.put("userPurpose", safePurpose);
 
         try {
-            ResponseEntity<AiSummaryDTO[]> response = restTemplate.postForEntity(
-                url,
-                request,
-                AiSummaryDTO[].class
-            );
-
-            return Arrays.asList(response.getBody());
+            ResponseEntity<AiSummaryDTO[]> response =
+                restTemplate.postForEntity(url, request, AiSummaryDTO[].class);
+            AiSummaryDTO[] body = response.getBody();
+            return (body != null) ? Arrays.asList(body) : List.of();
         } catch (Exception e) {
             System.out.println("❌ FastAPI 감성 분석 호출 실패: " + e.getMessage());
-            return List.of();  // ✅ Java 9 이상이면 Collection.emptyList()보다 List.of() 추천
+            return List.of();
         }
     }
-
 }
+
+
+
+
